# dlm

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  RELEASING.md  WEB_INTERFACE.md  cli.ts  collection.ts  collection_test.ts  config.ts  daemon.ts  daemon.worker.ts  daemon_test.ts  deno.json  dlm.example.yml  download.ts  download_worker.ts  logger.ts  main.ts  release.ts  render_web.ts  scrape.ts  server.ts  types.ts  urls.ts  vdm.ts  videos.ts  web.ts  web_server_test.ts  web_test.ts  worker_util.ts
.claude/: settings.local.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  deno.yml  desktop-gtk.yml
browser_ext/: README.md  USAGE.md  build_ext.ts  demo.html  test_ext.ts  test_page.html
browser_ext/src/: background.js  content.js  manifest.json  options.html  options.js  polyfill.js  popup.html  popup.js
chrome_ext/: README.md  background.js  manifest.json  options.html  options.js
desktop_gtk/: CLAUDE.md  Cargo.toml  README.md  install.sh  justfile  setup.sh
desktop_gtk/src/: api.rs  config.rs  main.rs  types.rs
go/: Makefile  README.md  go.mod
go/cmd/dlm/: main.go
go/docs/: MIGRATION.md
go/internal/config/: config.go
go/internal/daemon/: daemon.go
go/internal/database/: database.go  operations.go
go/internal/downloader/: processor.go  title.go
go/internal/logger/: logger.go
go/internal/models/: download.go
go/internal/web/: handlers.go  server.go
go/web/templates/: index.html
scripts/: release-browser-ext.sh  release-dlm.sh
