[package]
name = "dlm-gtk"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk = { version = "0.10", package = "gtk4", features = ["v4_18"] }
adw = { version = "0.8", package = "libadwaita", features = ["v1_6"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2", features = ["json"] }
open = "5"
